feat: distinguish Aviator audits with auto-remediation